testdata/baselines/reference/submodule/conformance/tsxElementResolution9.errors.txt
file.tsx(11,2): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type '{}' is not assignable to type 'number'.
file.tsx(18,2): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type '{}' is not assignable to type 'number'.
file.tsx(18,2): error TS2786: 'Obj2' cannot be used as a JSX component.
  Property 'something' is missing in type '{ x: number; } & { y: string; }' but required in type 'Element'.
file.tsx(25,2): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type '{ x: number; }' is not assignable to type 'number'.
file.tsx(25,2): error TS2786: 'Obj3' cannot be used as a JSX component.
  Property 'something' is missing in type '{ x: number; } & { x: number; y: string; }' but required in type 'Element'.


==== file.tsx (5 errors) ====
    declare module JSX {
    	interface Element { something; }
    	interface IntrinsicElements { }
    }
    
    interface Obj1 {
    	new(n: string): { x: number };
    	new(n: number): { y: string };
    }
    var Obj1: Obj1;
    <Obj1 />; // Error, return type is not an object type
     ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type '{}' is not assignable to type 'number'.
!!! related TS2771 file.tsx:8:2: The last overload is declared here.
    
    interface Obj2 {
    	(n: string): { x: number };
    	(n: number): { y: string };
    }
    var Obj2: Obj2;
    <Obj2 />; // Error, return type is not an object type
     ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type '{}' is not assignable to type 'number'.
!!! related TS2771 file.tsx:15:2: The last overload is declared here.
     ~~~~
!!! error TS2786: 'Obj2' cannot be used as a JSX component.
!!! error TS2786:   Property 'something' is missing in type '{ x: number; } & { y: string; }' but required in type 'Element'.
!!! related TS2728 file.tsx:2:22: 'something' is declared here.
    
    interface Obj3 {
    	(n: string): { x: number };
    	(n: number): { x: number; y: string };
    }
    var Obj3: Obj3;
    <Obj3 x={42} />; // OK
     ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type '{ x: number; }' is not assignable to type 'number'.
!!! related TS2771 file.tsx:22:2: The last overload is declared here.
     ~~~~
!!! error TS2786: 'Obj3' cannot be used as a JSX component.
!!! error TS2786:   Property 'something' is missing in type '{ x: number; } & { x: number; y: string; }' but required in type 'Element'.
!!! related TS2728 file.tsx:2:22: 'something' is declared here.
    